[package]
name = "cargo-feature-tree"
version = "0.2.0"
edition = "2021"
authors = ["Berend Sliedrecht (blu3beri) blu3beri@proton.me"]
description = "cargo feature-tree shows your features, and what they expand to, in a tree-like format"
license = "MIT"

[dependencies]
cargo_toml = "0.15.2"
termtree = "0.4.1"
